# gate4agent

./: .gitignore  Cargo.toml  DEBUGGING.md  LICENSE  README.md  ROADMAP.md
examples/: acp_hello.rs  pipe_hello.rs  pty_cursor_probe.rs  pty_hello.rs  rpc_hello.rs
src/: error.rs  lib.rs  manager.rs  persist.rs  snapshot.rs  types.rs  utils.rs
src/acp/: host.rs  mod.rs  protocol.rs  reader.rs  session.rs  spawn.rs
src/cli/: factory.rs  mod.rs  pipeline.rs  traits.rs
src/cli/claude/: mod.rs  parser.rs
src/cli/codex/: mod.rs  parser.rs
src/cli/cursor/: mod.rs  parser.rs
src/cli/gemini/: mod.rs  parser.rs
src/cli/openclaw/: mod.rs
src/cli/opencode/: mod.rs  parser.rs
src/context/: mod.rs
src/core/: capabilities.rs  error.rs  image.rs  mod.rs  types.rs
src/cure/: merge.rs  mod.rs  opencode_cache.rs  openrouter.rs  store.rs  types.rs
src/daemon/: config.rs  mod.rs  openclaw.rs  opencode.rs  probe.rs  session.rs
src/detection/: mod.rs  rate_limit.rs
src/history/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
src/ndjson/: factory.rs  mod.rs  parsers.rs  traits.rs
src/parser/: mod.rs  screen_analyzer.rs  screen_parser.rs
src/pipe/: mod.rs  process.rs  session.rs
src/pipe/cli/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  traits.rs
src/probe/: mod.rs
src/pty/: mod.rs  rate_limit.rs  screen.rs  session.rs  snapshot.rs  vte.rs  wrapper.rs
src/pty/cli/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  pipeline.rs  traits.rs
src/rpc/: handler.rs  id.rs  message.rs  mod.rs  pending.rs  session.rs
src/transport/: daemon_runner.rs  daemon_spec.rs  mod.rs  options.rs  pipe_runner.rs  session.rs
tests/: acp_live.rs  builder_argv.rs  daemon_probe.rs  pipe_live.rs  rpc_live.rs  spawn_argv_parity.rs  transport_session.rs
